examples/test/testpolicy15025.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15025
  namespace: namespace14
spec:
  podSelector:
    matchLabels:
      key34: value34
      key13: value19
      key23: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value21
          key37: value34
          key13: value47
      podSelector:
        matchLabels:
          key48: value19
